choose us option done

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       class="h-screen bg-cover bg-center"
     >
       <div class="bg-black/50 h-full space-y-4 p-30 py-80">
-        <h2 class="text-6xl font-extrabold text-white">
+        <h2 class="md:text-6xl text-2xl font-extrabold text-white">
           Best Collection For You
         </h2>
         <p class="text-white">
@@ -91,11 +91,68 @@
       </div>
     </section>
     <section class="p-12">
-      <h2 class="text-center text-3xl">Why Choose Us</h2>
-      <p class="text-center text-gray-500">
+      <h2 class="text-center font-bold text-4xl">Why Choose Us</h2>
+      <p class="text-center mt-4 text-gray-500">
         We offer the best products and services to make your shopping experience
         enjoyable and hassle-free.
       </p>
+
+      <div class="flex mt-4 p-10">
+        <!-- 1st card -->
+        <div
+          class="card relative w-80 rounded-xl border border-gray-300 p-6 m-10 shadow-lg space-y-3"
+        >
+          <button
+            class="btn border border-white absolute shadow-lg -top-3 -left-0.1 w-10 bg-blue-100 p-2"
+          >
+            <i class="fa-solid fa-car"></i>
+          </button>
+          <h3 class="text-2xl font-semibold mt-5">Fast Delivery</h3>
+          <p class="text-gray-500">
+            Get your products delivered quickly and efficiently.
+          </p>
+        </div>
+        <!-- 2nd card -->
+        <div
+          class="card relative border border-gray-300 w-80 rounded-xl p-6 m-10 shadow-lg space-y-3"
+        >
+          <button
+            class="btn border border-white absolute shadow-lg -top-3 -left-0.1 w-10 bg-blue-100 p-2"
+          >
+            <i class="fa-solid fa-headphones"></i>
+          </button>
+          <h3 class="text-2xl font-semibold mt-5">24/7 Support</h3>
+          <p class="text-gray-500">
+            Our support team is available around the clock to assist you.
+          </p>
+        </div>
+        <!-- 3rd card -->
+        <div
+          class="card relative w-80 rounded-xl border border-gray-300 p-6 m-10 shadow-lg space-y-3"
+        >
+          <button
+            class="btn border border-white absolute shadow-lg -top-3 -left-0.1 w-10 bg-blue-100 p-2"
+          >
+            <i class="fa-solid fa-lock"></i>
+          </button>
+          <h3 class="text-2xl font-semibold mt-5">Secure Payment</h3>
+          <p class="text-gray-500">Enjoy secure and safe payment options.</p>
+        </div>
+        <!-- 4th card -->
+        <div
+          class="card relative w-80 rounded-xl border border-gray-300 p-6 m-10 shadow-lg space-y-3"
+        >
+          <button
+            class="btn border border-white absolute shadow-lg -top-3 -left-0.1 w-10 bg-blue-100 p-2"
+          >
+            <i class="fa-solid fa-rotate"></i>
+          </button>
+          <h3 class="text-2xl font-semibold mt-5">Easy Returns</h3>
+          <p class="text-gray-500">
+            Return your products easily and hassle-free.
+          </p>
+        </div>
+      </div>
     </section>
     <div class="footer sm:footer-horizontal bg-gray-700 text-base-content p-10">
       <nav>
