all products load done

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <div class="flex mt-4 p-10">
         <!-- 1st card -->
         <div
-          class="card relative w-80 rounded-xl border border-gray-300 p-6 m-10 shadow-lg space-y-3"
+          class="card relative bg-white w-80 rounded-xl border border-gray-300 p-6 m-10 shadow-lg space-y-3"
         >
           <button
             class="btn border border-white absolute shadow-lg -top-3 -left-0.1 w-10 bg-blue-100 p-2"
@@ -114,7 +114,7 @@
         </div>
         <!-- 2nd card -->
         <div
-          class="card relative border border-gray-300 w-80 rounded-xl p-6 m-10 shadow-lg space-y-3"
+          class="card bg-white relative border border-gray-300 w-80 rounded-xl p-6 m-10 shadow-lg space-y-3"
         >
           <button
             class="btn border border-white absolute shadow-lg -top-3 -left-0.1 w-10 bg-blue-100 p-2"
@@ -128,7 +128,7 @@
         </div>
         <!-- 3rd card -->
         <div
-          class="card relative w-80 rounded-xl border border-gray-300 p-6 m-10 shadow-lg space-y-3"
+          class="card relative bg-white w-80 rounded-xl border border-gray-300 p-6 m-10 shadow-lg space-y-3"
         >
           <button
             class="btn border border-white absolute shadow-lg -top-3 -left-0.1 w-10 bg-blue-100 p-2"
@@ -140,7 +140,7 @@
         </div>
         <!-- 4th card -->
         <div
-          class="card relative w-80 rounded-xl border border-gray-300 p-6 m-10 shadow-lg space-y-3"
+          class="card bg-white relative w-80 rounded-xl border border-gray-300 p-6 m-10 shadow-lg space-y-3"
         >
           <button
             class="btn border border-white absolute shadow-lg -top-3 -left-0.1 w-10 bg-blue-100 p-2"
@@ -152,6 +152,16 @@
             Return your products easily and hassle-free.
           </p>
         </div>
+      </div>
+    </section>
+    <!-- trending section -->
+    <section class="border border-red">
+      <h2 class="font-bold text-4xl mx-14 my-6">Trending Now</h2>
+      <div class="border border-red">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
       </div>
     </section>
     <div class="footer sm:footer-horizontal bg-gray-700 text-base-content p-10">
