--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
               tabindex="-1"
               class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow"
             >
-              <li><a class="hover:text-purple-700">Home</a></li>
+              <li>
+                <a onclick="goToProducts2()" class="hover:text-purple-700"
+                  >Home</a
+                >
+              </li>
               <li>
                 <a onclick="goToProducts()" class="hover:text-purple-700"
                   >Products</a
@@ -60,7 +64,11 @@
         </div>
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1">
-            <li><a class="hover:text-purple-700">Home</a></li>
+            <li>
+              <a onclick="goToProducts2()" class="hover:text-purple-700"
+                >Home</a
+              >
+            </li>
             <li>
               <a onclick="goToProducts()" class="hover:text-purple-700"
                 >Products</a
@@ -97,10 +105,10 @@
         enjoyable and hassle-free.
       </p>
 
-      <div class="flex mt-4 p-10">
+      <div class="md:flex justify-between flex-cols mt-4">
         <!-- 1st card -->
         <div
-          class="card relative bg-white w-80 rounded-xl border border-gray-300 p-6 m-10 shadow-lg space-y-3"
+          class="card bg-white max-w-80 rounded-xl border border-gray-300 p-6 m-10 shadow-lg space-y-3"
         >
           <button
             class="btn border border-white absolute shadow-lg -top-3 -left-0.1 w-10 bg-blue-100 p-2"
@@ -114,7 +122,7 @@
         </div>
         <!-- 2nd card -->
         <div
-          class="card bg-white relative border border-gray-300 w-80 rounded-xl p-6 m-10 shadow-lg space-y-3"
+          class="card bg-white border border-gray-300 max-w-80 rounded-xl p-6 m-10 shadow-lg space-y-3"
         >
           <button
             class="btn border border-white absolute shadow-lg -top-3 -left-0.1 w-10 bg-blue-100 p-2"
@@ -128,7 +136,7 @@
         </div>
         <!-- 3rd card -->
         <div
-          class="card relative bg-white w-80 rounded-xl border border-gray-300 p-6 m-10 shadow-lg space-y-3"
+          class="card bg-white max-w-80 rounded-xl border border-gray-300 p-6 m-10 shadow-lg space-y-3"
         >
           <button
             class="btn border border-white absolute shadow-lg -top-3 -left-0.1 w-10 bg-blue-100 p-2"
@@ -140,7 +148,7 @@
         </div>
         <!-- 4th card -->
         <div
-          class="card bg-white relative w-80 rounded-xl border border-gray-300 p-6 m-10 shadow-lg space-y-3"
+          class="card bg-white max-w-80 rounded-xl border border-gray-300 p-6 m-10 shadow-lg space-y-3"
         >
           <button
             class="btn border border-white absolute shadow-lg -top-3 -left-0.1 w-10 bg-blue-100 p-2"
