--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       </form>
     </div>
     <footer class="p-4 bg-gray-700 text-base-content">
-      <div class="flex justify-between items-center m-10">
+      <div class="md:flex justify-between items-center m-10">
         <p class="text-gray-400">&copy; 2025 SwiftCart. All rights reserved.</p>
         <div class="flex gap-4">
           <a href="#"><i class="fa-brands fa-facebook-f"></i></a
