--- a/products.html
+++ b/products.html
@@ -124,6 +124,64 @@
         </div>
       </dialog>
     </section>
+
+    <div class="footer sm:footer-horizontal bg-gray-700 text-base-content p-10">
+      <nav>
+        <h6 class="text-4xl text-blue-500 font-bold">SwiftCart</h6>
+        <p class="text-white">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque
+          natus<br />
+          obcaecati fuga possimus, illo harum. Voluptatem unde aspernatur natus
+          iste.
+        </p>
+      </nav>
+      <nav>
+        <h6 class="footer-title text-gray-200">Quick Links</h6>
+        <a class="link link-hover text-white">Home</a>
+        <a class="link link-hover text-white">Products</a>
+        <a class="link link-hover text-white">About us</a>
+        <a class="link link-hover text-white">Contact</a>
+      </nav>
+      <nav>
+        <h6 class="footer-title text-gray-200">Support</h6>
+        <a class="link link-hover text-white">FAQ</a>
+        <a class="link link-hover text-white">Terms of use</a>
+        <a class="link link-hover text-white">Privacy policy</a>
+        <a class="link link-hover text-white">Cookie policy</a>
+      </nav>
+      <form>
+        <h6 class="footer-title text-gray-200">Newsletter</h6>
+        <fieldset class="w-80">
+          <p class="text-white mb-3">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum,
+            ipsum.
+          </p>
+          <div class="join">
+            <input
+              type="text"
+              placeholder="username@site.com"
+              class="input input-bordered join-item"
+            />
+            <button class="btn btn-primary join-item">Subscribe</button>
+          </div>
+        </fieldset>
+      </form>
+    </div>
+    <footer class="p-4 h-full bg-gray-700 text-base-content">
+      <div class="md:flex justify-between items-center m-10">
+        <div>
+          <p class="text-gray-400">
+            &copy; 2025 SwiftCart. All rights reserved.
+          </p>
+        </div>
+        <div class="flex gap-4">
+          <a href="#"><i class="fa-brands fa-facebook-f"></i></a
+          ><a href="#"><i class="fa-brands fa-twitter"></i></a
+          ><a href="#"> <i class="fa-brands fa-instagram"></i></a
+          ><a href=""><i class="fa-solid fa-envelope"></i></a>
+        </div>
+      </div>
+    </footer>
     <script src="./index.js"></script>
   </body>
 </html>
